--- a/server/templates/verifycation_error.html
+++ b/server/templates/verifycation_error.html
@@ -3,42 +3,24 @@
 <head>
   <meta charset="UTF-8">
   <title>Cloudy - Authentifizierungsfehler</title>
-  <style>
-    /* Styling für die Seite */
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #f2f2f2;
-      text-align: center;
-      padding: 50px;
-    }
-    h1 {
-      font-size: 36px;
-      color: #f44336;
-      margin-bottom: 20px;
-    }
-    p {
-      font-size: 24px;
-      color: #333;
-      margin-bottom: 30px;
-    }
-    button {
-      background-color: #f44336;
-      color: #fff;
-      border: none;
-      border-radius: 4px;
-      padding: 10px 20px;
-      font-size: 18px;
-      cursor: pointer;
-    }
-    button:hover {
-      background-color: #d32f2f;
-    }
-  </style>
+  <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 </head>
-<body>
-  <h1>Verifizierungsfehler</h1>
-  <p>Es ist ein Fehler bei der Verifizierung Ihrer E-Mail aufgetreten.</p>
-  <p>Bitte versuchen Sie sich erneut einzuloggen!</p>
-  <a href={{ homepage }}><button>Zurück zur Homepage</button></a>
+
+<body style="background-color: #f5f5f5; font-family: 'Poppins', sans-serif;">
+  <div class="p-12">
+  <div class="flex justify-center items-center flex-col my-16 bg-white p-8 rounded-xl mx-auto">
+    <div class="text-center mb-8">
+      <div class="w-48 mx-auto">
+      <img src="login_failed.png" class="w-full">
+    </div>
+  <h1 class="text-3xl mb-4 ">Verifizierungsfehler</h1>
+  <p class="mb-8">Es ist ein Fehler bei der Verifizierung Ihrer E-Mail aufgetreten. Bitte versuchen Sie sich erneut zu registrieren.</p>
+  <a href={{ login }} class="bg-black text-white px-6 py-3 rounded-xl tracking-wider hover:underline">Bei Cloudy Registrieren</a>
+</div>
+</div>
+</div>
 </body>
 </html>
