--- a/server/templates/verifyed.html
+++ b/server/templates/verifyed.html
@@ -3,42 +3,23 @@
 <head>
   <meta charset="UTF-8">
   <title>Cloudy - E-Mail erfolgreich verifiziert</title>
-  <style>
-    /* Styling für die Seite */
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #f2f2f2;
-      text-align: center;
-      padding: 50px;
-    }
-    h1 {
-      font-size: 36px;
-      color: #007bff;
-      margin-bottom: 20px;
-    }
-    p {
-      font-size: 24px;
-      color: #333;
-      margin-bottom: 30px;
-    }
-    button {
-      background-color: #007bff;
-      color: #fff;
-      border: none;
-      border-radius: 4px;
-      padding: 10px 20px;
-      font-size: 18px;
-      cursor: pointer;
-    }
-    button:hover {
-      background-color: #0062cc;
-    }
-  </style>
+  <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 </head>
-<body>
-  <h1>E-Mail erfolgreich verifiziert</h1>
-  <p>Ihre E-Mail wurde erfolgreich verifiziert.</p>
-  <p>Vielen Dank, dass Sie Cloudy nutzen. Wir hoffen, dass Sie mit unserer App zufrieden sind.</p>
-  <a href={{ login }}><button>Weiter zur App</button></a>
+<body style="background-color: #f5f5f5; font-family: 'Poppins', sans-serif;">
+  <div class="p-12">
+  <div class="flex justify-center items-center flex-col my-16 bg-white p-8 rounded-xl mx-auto">
+    <div class="text-center mb-8">
+      <div class="w-48 mx-auto">
+      <img src="login.png" class="w-full">
+    </div>
+  <h1 class="text-3xl mb-4 ">E-Mail erfolgreich verifiziert</h1>
+  <p class="mb-8">Vielen Dank, dass Sie Cloudy nutzen. Wir hoffen, dass Sie mit unserer App zufrieden sind.</p>
+  <a href={{ login }} class="bg-black text-white px-6 py-3 rounded-xl tracking-wider hover:underline">Bei Cloudy anmelden</a>
+</div>
+</div>
+</div>
 </body>
 </html>
