Changes_to_API, README.md
Debugging of API
Writing a README.md in order to describe the installation proccess

--- a/server/templates/verifycation_error.html
+++ b/server/templates/verifycation_error.html
@@ -18,7 +18,7 @@
     </div>
   <h1 class="text-3xl mb-4 ">Verifizierungsfehler</h1>
   <p class="mb-8">Es ist ein Fehler bei der Verifizierung Ihrer E-Mail aufgetreten. Bitte versuchen Sie sich erneut zu registrieren.</p>
-  <a href={{ login }} class="bg-black text-white px-6 py-3 rounded-xl tracking-wider hover:underline">Bei Cloudy Registrieren</a>
+  <a href={{ page }} class="bg-black text-white px-6 py-3 rounded-xl tracking-wider hover:underline">Bei Cloudy Registrieren</a>
 </div>
 </div>
 </div>
