--- a/server/templates/verifyed.html
+++ b/server/templates/verifyed.html
@@ -17,7 +17,7 @@
     </div>
   <h1 class="text-3xl mb-4 ">E-Mail erfolgreich verifiziert</h1>
   <p class="mb-8">Vielen Dank, dass Sie Cloudy nutzen. Wir hoffen, dass Sie mit unserer App zufrieden sind.</p>
-  <a href={{ login }} class="bg-black text-white px-6 py-3 rounded-xl tracking-wider hover:underline">Bei Cloudy anmelden</a>
+  <a href={{ page }} class="bg-black text-white px-6 py-3 rounded-xl tracking-wider hover:underline">Bei Cloudy anmelden</a>
 </div>
 </div>
 </div>
